turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: STOP is already defined as value STOP
val STOP = 0
    ^Turmite:6: error: STOP  is already defined as value STOP
val STOP = 0
    ^Turmite:18: error: not found: value i
  while (couleurSol != colors(i) && i<l){
                              ^Turmite:18: error: not found: value i
  while (couleurSol != colors(i) && i<l){
                                    ^Turmite:24: error: type mismatch;
 found   : Int
 required: Array[Int]
    case DROITE => right();forward();
         ^Turmite:25: error: type mismatch;
 found   : Int
 required: Array[Int]
    case GAUCHE => left();forward();
         ^Turmite:26: error: type mismatch;
 found   : Int
 required: Array[Int]
    case STOP => ;
         ^Turmite:27: error: type mismatch;
 found   : Int
 required: Array[Int]
    case PASVIRAGE => forward()
         ^Turmite:28: error: type mismatch;
 found   : Int
 required: Array[Int]
    case UTURN => right();right();forward();
         ^